Build with Parcel

--- a/src/popup/main.html
+++ b/src/popup/main.html
@@ -1,4 +1,4 @@
 <h1>Long Distance Cinema</h1>
 <button id="btn_start">Start</button>
 
-<script src="main.js"></script>
+<script src="main.js" type="module"></script>
